# pico-mpr121

./: .gitignore  LICENSE  README.md
example/: touch.c
examples/: CMakeLists.txt  touch.c
examples/autoconfig_sensor/: CMakeLists.txt  autoconfig_sensor.c
examples/hello_mpr121/: CMakeLists.txt  hello_mpr121.c
examples/sensor_values/: CMakeLists.txt  sensor_values.c
lib/: mpr121.c
lib/include/: mpr121.h
